adding media queries

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <div id="navBox">
       <nav>
         <br>
-        <a class="navItems" href="index.html">About</a> |
-        <a class="navItems" href="portfolio.html">Portfolio</a> |
+        <a class="navItems" href="index.html">About</a>
+        <a class="navItems" href="portfolio.html">Portfolio</a>
         <a class="navItems" href="contact.html">Contact</a>
       </nav>
     </div>
